<resources>
    <string name="app_name">Vehicle Tracker</string>
    <string name="greeting_text">Hello! Welcome Back!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup_greeting_text">Come join us!</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user_sign_up_here">New user? Sign up here</string>
    <string name="already_registered_login_here">Already registered? Login here</string>
    <string name="api_key"></string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="permission_request">Request Permission</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
</resources>